fixed images on smaller devices iPad iOS do not work well, falling back to scroll

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46,6 +46,13 @@ body {
     background-attachment: fixed;
 }
 
+@media(max-width: 1024px) {
+    /*background attachment fix for smaller devices*/
+    .fixed-attachment {
+        background-attachment: scroll;
+    }
+}
+
 footer {
     background-color: #333;
     color: #ddd;
